Fix build compile_dist_test on rhel80-debug-ubsan-all-feature-flags

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • 163
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      [2023/08/04 05:22:38.804] ld.lld: error: undefined symbol: typeinfo for mongo::TextMatchExpression
      [2023/08/04 05:22:38.804] >>> referenced by expression_hasher.cpp
      [2023/08/04 05:22:38.804] >>>               matcher/expression_hasher.o:(.data+0xC328) in archive build/cached/mongo/db/libquery_expressions.a
      [2023/08/04 05:22:38.804] >>> referenced by expression_hasher.cpp
      [2023/08/04 05:22:38.804] >>>               matcher/expression_hasher.o:(.data+0xC628) in archive build/cached/mongo/db/libquery_expressions.a
      

            Assignee:
            Alexander Ignatyev
            Reporter:
            Alexander Ignatyev
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: