SERVER-79858 Fix build compile_dist_test on UBSAN variants